<resources>
    <string name="app_name">"TASK DIARY "</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label">Title</string>
    <string name="description">Description</string>
    <string name="selectCategory">Select Task Category</string>
    <string name="selectpriority">Select Task Priority</string>
    <string name="selectType">Select Assignee</string>
    <string name="date">Select Date</string>
    <string name="select">Select</string>
    <string name="check">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="oops">Oops, Something went wrong!</string>
    <string name="selectoption">Please select one option</string>
    <string name="task_added">Task Added Successfully</string>
    <string name="empty_title">Enter Task Title</string>
    <string name="empty_category">Please Select category</string>
    <string name="empty_priority">Please Select Priority</string>
    <string name="empty_type">Please select type of assignee</string>
    <string name="empty_date">Please enter date</string>
    <string name="no_task">No Task Created</string>
    <string name="delete">Delete</string>
    <string name="Complete">Complete</string>
    <string name="add_category">Add New Category</string>
    <string name="input_hint">Category</string>
    <string name="prefill_input" />
    <string name="category_added">Category added succesfully</string>
    <string name="new_empty_category">Please enter category</string>
    <string name="category_exist">Category already exist</string>
    <string name="share_with">Share this task with</string>
    <string name="no_number">No contact number found</string>
    <string name="reminder">Reminders</string>
    <string name="add_reminder">Add</string>
    <string name="add_reminder_title">Add Reminder to this task</string>
    <string name="selecttime">Please select time</string>
    <string name="select_contact">Please Select atleast one contact</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="incomplete">Incomplete</string>
    <string name="view_all">View All Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="update">Update</string>
    <string name="delete_success">Category Deleted</string>
    <string name="update_success">Category Updated</string>
    <string name="create_task">Create Task</string>
    <string name="select_week">Select options to add</string>
    <string name="task_updated">Task Data Updated</string>
    <string name="share">Share</string>
    <string name="email_subject">Task Details</string>
    <string name="empty_reminder">Please add reminder</string>
    <string name="done">Delete</string>
    <string name="completed_task">Completed Task</string>
    <string name="remove">Remove</string>
</resources>
