<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@color/white">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        layout="@layout/layout_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></include>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelEditText"
        android:hint="@string/label"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/black"
        android:padding="@dimen/padding_large"
        android:layout_marginTop="@dimen/margin_large"
        />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionEditText"
        android:hint="@string/description"
        android:lines="2"
        android:gravity="top|left"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/black"
        android:padding="@dimen/padding_large"
        android:layout_marginTop="@dimen/margin_large"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/selectCategoryTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:textColor="@color/light_grey"
            android:text="@string/selectCategory"
            android:padding="@dimen/padding_large"
            android:textSize="@dimen/text_size_large"/>


        <TextView
            android:id="@+id/selectedCatgeoryTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:textColor="@color/app_color"
            android:padding="@dimen/padding_large"
            android:gravity="right"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/selectPriorityTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:textColor="@color/light_grey"
            android:text="@string/selectpriority"
            android:padding="@dimen/padding_large"
            android:textSize="@dimen/text_size_large"/>


        <TextView
            android:id="@+id/selectedPriorityTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:textColor="@color/app_color"
            android:padding="@dimen/padding_large"
            android:gravity="right"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/selectTypeTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:textColor="@color/light_grey"
            android:text="@string/selectType"
            android:padding="@dimen/padding_large"
            android:textSize="@dimen/text_size_large"/>


        <TextView
            android:id="@+id/selectedTypeTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:textColor="@color/app_color"
            android:padding="@dimen/padding_large"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/groupLayout"
        android:visibility="gone"
        android:layout_margin="@dimen/margin_normal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/contactImage1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/add_user"
                app:border_width="2dp"
                app:border_color="@color/white"/>

            <TextView
                android:id="@+id/contactName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/app_color"
                android:padding="@dimen/padding_large"
                android:text="Contact Name"
                android:singleLine="true"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/contactImage2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/add_user"
                app:border_width="2dp"
                app:border_color="@color/white"/>

            <TextView
                android:id="@+id/contactName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/app_color"
                android:padding="@dimen/padding_large"
                android:text="Contact Name"
                android:singleLine="true"
                android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/contactImage3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/add_user"
                app:border_width="2dp"
                app:border_color="@color/white"/>

            <TextView
                android:id="@+id/contactName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/app_color"
                android:padding="@dimen/padding_large"
                android:text="Contact Name"
                android:singleLine="true"
                android:gravity="center"/>
        </LinearLayout>


    </LinearLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dateEditText"
        android:hint="@string/date"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/black"
        android:padding="@dimen/padding_large"
        android:layout_margin="@dimen/margin_large"
        android:visibility="gone"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/app_color"></View>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:layout_alignParentLeft="true"
            android:textColor="@color/app_color"
            android:padding="@dimen/padding_large"/>


        <TextView
            android:id="@+id/addReminderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_reminder"
            android:layout_alignParentRight="true"
            android:textColor="@color/app_color"
            android:padding="@dimen/padding_large"/>

    </RelativeLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:id="@+id/reminderslistView"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        ></ListView>

</LinearLayout>

</ScrollView>